apps/routers/bart-howard/bart-stage-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bart-stage
  namespace: traefik-staging
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`bart-stage.howard.moomboo.space`)
    services:
    - kind: Service
      name: bart-stage
      namespace: traefik-staging
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: bart-stage
  namespace: traefik-staging
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`bart-stage.howard.moomboo.space`)
    services:
    - name: bart-stage
      namespace: traefik-staging
      port: 443
  tls:
    passthrough: true
